--- a/ITUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
+++ b/ITUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
@@ -3,32 +3,29 @@
 
 @{
     ViewBag.Title = "Exec";
-    var calc = new Calc();
-    var operations = calc.GetOperationsName();
         
 }
 
-<h2>Exec</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CalcModel</h4>
+        <h4>Вычислятор</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.OperName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("OperationList", new SelectList(operations), htmlAttributes: new { @class = "form-control", onchange = "UpdateProduct(this);" })
+                @Html.DropDownListFor(model => model.OperName, Model.OperationList, htmlAttributes: new { @class = "form-control", @onblur = "calculate()" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.X, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.X, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.X, new { htmlAttributes = new { @class = "form-control", @onblur = "calculate()" }})
                 @Html.ValidationMessageFor(model => model.X, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -36,25 +33,35 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Y, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Y, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Y, new { htmlAttributes = new { @class = "form-control", @onblur = "calculate()" } })
                 @Html.ValidationMessageFor(model => model.Y, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Result, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Result, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Result, "", new { @class = "text-danger" })
+            <div class="col-md-10" id="result">
+                @Html.DisplayFor(model => model.Result, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Вычислить" class="btn btn-default" />
+                @Html.Submit("Вычислить", "calculate(); return false;")
             </div>
         </div>
     </div>
 }
 
+<script>
+    function calculate() {
+        $.ajax({
+            method: "POST",
+            url: "/Calc/Exec",
+            data: $('form').serializeArray()
+        }).success(function (result) {
+            $("#result").html(result) 
+        })
+    }
+</script>
 
