--- a/ITUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
+++ b/ITUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
@@ -41,13 +41,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Result, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10" id="result">
-                @Html.DisplayFor(model => model.Result, new { htmlAttributes = new { @class = "form-control" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                @Html.Submit("Вычислить", "calculate(); return false;")
+                @Html.Partial("Partial")
             </div>
         </div>
     </div>
