--- a/ITUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
+++ b/ITUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
@@ -18,30 +18,23 @@
         <div class="form-group">
             @Html.LabelFor(model => model.OperName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.OperName, Model.OperationList, htmlAttributes: new { @class = "form-control", @onblur = "calculate()" })
+                @Html.DropDownListFor(model => model.OperName, Model.OperationList, htmlAttributes: new { @class = "form-control", onChange = "calculate()" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.X, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.InputData, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.X, new { htmlAttributes = new { @class = "form-control", @onblur = "calculate()" }})
-                @Html.ValidationMessageFor(model => model.X, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.InputData, 
+               "Collection",
+               new { htmlAttributes = new { @class = "form-control", oninput = "calculate()" }})
+                @Html.ValidationMessageFor(model => model.InputData, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Y, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Y, new { htmlAttributes = new { @class = "form-control", @onblur = "calculate()" } })
-                @Html.ValidationMessageFor(model => model.Y, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Result, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10" id="result">
-                @Html.Partial("Partial")
+                @Html.Partial("ExecResult")
             </div>
         </div>
     </div>
@@ -49,6 +42,13 @@
 
 <script>
     function calculate() {
+        var xElement = $("input[name=InputData]").last();
+        if (xElement.val().endsWith(" ")) {
+            var newInput = $("<input class=\"form-control text-box single-line\" name = \"InputData\" oninput=\"calculate()\" type=\"text\" value=\"\">");
+            newInput.insertAfter(xElement);
+            newInput.focus();
+        }
+
         $.ajax({
             method: "POST",
             url: "/Calc/Exec",
