Калькулятор работает, добавлена синхронизация операцией с БД, добавлена проверка для WHERE

--- a/ITUniver.TeleCalc.Web/Views/Shared/Ops.cshtml
+++ b/ITUniver.TeleCalc.Web/Views/Shared/Ops.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Operations";
-    string[] list = ViewBag.Operations;
+    string[] list = (string[])ViewBag.Operations;
 }
 
 
