--- a/ITUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
+++ b/ITUniver.TeleCalc.Web/Views/Calc/Exec.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewBag.Title = "Exec";
-
+    var topOpers = ViewData["Tops"] as IEnumerable<string>;
 }
 
 
@@ -28,9 +28,13 @@
                     }
                     )
                 @Html.ValidationMessageFor(model => model.OperName, "", new { @class = "text-danger" })
+            <br />
+                @foreach (var item in topOpers)
+                {
+                    <input type="button" class="btn btn-info" onclick="topCalc('@item')" value = "@item" />
+                }
             </div>
-        </div>
-
+            </div>        
         <div class="form-group">
             @Html.LabelFor(model => model.InputData, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -100,6 +104,11 @@
             }
             )
 
+    }
+
+    function topCalc(oper) {
+        $("#OperName").val(oper);
+        realCalc();
     }
 </script>
 
